annual prev fix, map z-index fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,6 +41,6 @@
     background-image: linear-gradient(to right, #022e3df0, #037978eb);
     opacity: 1;
     position: relative;
-    z-index: 999999;
+    z-index: 3;
   }
 }
